# riscy

./: .gitignore  CMakeLists.txt  README.md  main.cpp
architecture/: Architecture.cpp  Architecture.h  Executor.cpp  Executor.h  Parser.cpp  Parser.h  Registers.cpp  Registers.h  Stack.cpp  Stack.h
tests/: instructions.json  instructions_prior.json
